--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Explore o Mundo Mágico, Junte-se à Aventura</h2>
             </div>
             <div class="home-side home-rigth">
-                <img src="./img/Hogwarts.png" alt="">
+                <img src="../img/Hogwarts.png" alt="Hogwarts">
             </div>
         </section>
         <section class="about" id="about">
