--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Explore o Mundo Mágico, Junte-se à Aventura</h2>
             </div>
             <div class="home-side home-rigth">
-                <img src="../img/Hogwarts.png" alt="Hogwarts">
+                <img src="./img/hogwarts.png" alt="Hogwarts">
             </div>
         </section>
         <section class="about" id="about">
@@ -84,7 +84,7 @@
             <div class="content-contact">
                 <h1>Para saber mais, acesse o link abaixo</h1>
                 <div class="ww-img">
-                    <a href="https://www.wizardingworld.com/" target="_blank"><img src="./img/wizarding world.png" alt=""></a>
+                    <a href="https://www.wizardingworld.com/" target="_blank"><img src="./img/wizarding world.png" alt="WizardingWorld"></a>
                 </div>
             </div>
         </section>
